--- a/src/pages/Dashbord/styles.module.css
+++ b/src/pages/Dashbord/styles.module.css
@@ -9,6 +9,7 @@
   justify-content: end;
   padding-right: 5rem;
   margin-right: 10rem;
+  position: fixed;
 }
 .container {
   margin: 4rem 0 0 3rem;
@@ -19,8 +20,13 @@
   margin: 2rem;
 }
 
+:where(.css-dev-only-do-not-override-1n7nwfa).ant-table-wrapper {
+  clear: both;
+  max-width: 109%;
+  margin-bottom: 96px;
+}
 .name {
-    position: absolute;
+  position: absolute;
   /* margin-right: 1rem; */
   left: 60rem;
   margin-top: 17px;
@@ -32,4 +38,10 @@
   margin-right: 18px;
   margin-bottom: 8px;
   align-items: center;
+}
+.footerr {
+  text-align: center;
+  bottom: 0px;
+  position: fixed;
+  width: 100%;
 }
